Added csdx-login.js to login with TOTP

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,12 +48,15 @@ jobs:
       - name: Set Launch Region
         run: csdx config:set:region AWS-NA
 
-      - name: Authenticate to Contentstack
+      - name: Login to Contentstack via CSDX CLI
         env:
           CSDX_EMAIL: ${{ secrets.CSDX_EMAIL }}
           CSDX_PASSWORD: ${{ secrets.CSDX_PASSWORD }}
-        run:
-          csdx auth:login -u "$CSDX_EMAIL" -p "$CSDX_PASSWORD"
+          CSDX_TOTP_SECRET: ${{ secrets.CSDX_TOTP_SECRET }}
+        run: node csdx-login.js
+
+      - name: Verify CSDX Login
+        run: csdx auth:whoami
 
       - name: Deploy using Launch config
         run: 
