--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.0",
     "next": "^15.4.2",
+    "otplib": "^12.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
