--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,11 @@ jobs:
             git log -1 --pretty=format:"%s"
 
       - name: Install CLI tools
-        run: |
+        run:
           npm install -g @contentstack/cli
-          npm install otplib
+      
+      - name: Install otplib
+        run: npm install otplib
 
       - name: Verify Contentstack CLI Installation
         run: csdx --version
